# toolbox_v1

./: CONTRIBUTING.md  Makefile  README.md  SPECIFICATIONS.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  Makefile  tauri.conf.json
src-tauri/bash-scripts/: Dockerfile  todo.c
src-tauri/bash-scripts/core/maintenance/: CLEAN.sh  MAJ.sh
src-tauri/bash-scripts/core/operations/: BOOT.sh  ISO.sh
src-tauri/bash-scripts/utils/: echo_status.sh
src-tauri/capabilities/: default.json
src-tauri/scripts/core/gathering/hardware_info/: display_info.sh
src-tauri/scripts/core/maintenance/: GUI.sh
src-tauri/scripts/core/operations/: BOOT.sh
src-tauri/scripts/core/test/: DIALOG.sh
src-tauri/src/: lib.rs  main.rs  todo.c
src-tauri/src/archived/: ISO.sh
src-tauri/src/bash-scripts/: Makefile
src-tauri/src/bash-scripts/archived/: bootstrap.sh
src-tauri/src/bash-scripts/core/gathering/: PRINT.sh
src-tauri/src/bash-scripts/core/operations/: CLONE.sh
src-tauri/src/core/: install.sh  main.sh  tui.sh
src-tauri/src/core/archived/: BASE.sh  BOOT.sh  ISO.sh
src-tauri/src/core/etc/config/: path.env  pkgs-list.sh
src-tauri/src/core/etc/template/: bloc-info-machine.sh  (+1 more)
src-tauri/src/core/gathering/: PRINT.sh
src-tauri/src/core/maintenance/: CLEAN.sh  MAJ.sh
src-tauri/src/core/operations/: BOOT.sh  CLONE.sh
src-tauri/src/core/shred/: nvme_erase.sh
src-tauri/src/core/utils/: fix_permissions.sh  init.sh  remove_file.sh  repare_pkgs.sh
src-tauri/src/utils/: mod.rs  print_shell.rs  start_session.rs  stress.rs  test_audio.rs
(+110 files in other folders)
