[package]
name = "toolbox"
version = "0.1.0"
description = "A Tauri App"
default-run = "toolbox"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
regex = "1"
dirs = "6.0.0"
base64 = "0.22.1"
rodio = "0.21.1"
